Add Bearer token auth ; fix Swagger annotations
