# routes/web.php
@@ -12,20 +12,17 @@ Route::get('/', function () {
     return view('welcome');
 });
 
-Route::get('/token', function () {
-    return csrf_token();
-});
+// Route::get('/token', function () {
+//     return csrf_token();
+// });
 
 
 #Product
-Route::post('/api/store', [ProductController::class,'store']);//send token from header
 Route::post('/api/createProduct', [ProductController::class,'createProduct']);//send token from header
-Route::get('/api/getAllProduct', [ProductController::class,'getAllProduct']);
-Route::get('/api/getAllProduct', [ProductController::class,'getAllProduct']);
-Route::get('/api/getProductById/{id}', [ProductController::class, 'getProductById']);
 Route::get('/api/getProductById', [ProductController::class, 'getProductById']);
-Route::put('/api/update/{id}', [ProductController::class, 'update']);//send token from header
-Route::delete('/api/delete/{id}', [ProductController::class, 'destroy']);//send token from header
+
+
+//Route::delete('/api/delete/{id}', [ProductController::class, 'destroy']);//send token from header
 
 
 
